minor URL tweak

--- a/package.json
+++ b/package.json
@@ -22,5 +22,5 @@
   "bugs": {
     "url": "https://github.com/pstrinkle/jquery-levelup/issues"
   },
-  "homepage": "https://github.com/pstrinkle/jquery-levelup#readme"
+  "homepage": "https://pstrinkle.github.com/jquery-levelup"
 }
